--- a/grid-example-1.html
+++ b/grid-example-1.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Am Grid - Example 1</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <style>
+            .row {
+              background-color: lightblue;
+            }
+            div[class*="col"]{
+              border: 2px red solid;
+              margin-top: 10px;
+              margin-bottom: 10px;
+            }
+        
+          </style>
 </head>
+
 <body>
-    <header>
-        I'm Example 1 - and i'm the best
-    </header>
+    
+    <div class="container">
+        <header>
+            I'm Example 1 - and i'm the best
+        </header>
+        <div class="row">
+            <div class="col-md-6">
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6"><p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+            </p></div>
+            <div class="col-md-6"><p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+            </p></div>
+        </div>
+    </div>
+
 </body>
+
 </html>
